[gd_scene load_steps=9 format=3 uid="uid://c6sk6j7ejwdis"]

[ext_resource type="Script" path="res://startup.gd" id="1_mnjxw"]
[ext_resource type="Texture2D" uid="uid://dhbkdfrhxn2ne" path="res://src/img/ui/icons/Overlay.png" id="2_0b10f"]
[ext_resource type="Texture2D" uid="uid://4sqvmltwqdq2" path="res://src/img/ui/icons/off.png" id="2_2f8ys"]
[ext_resource type="Texture2D" uid="uid://fyxsxtn6shib" path="res://src/img/ui/icons/on.png" id="3_igx0a"]
[ext_resource type="Theme" uid="uid://cktiaxhkanqmp" path="res://btns.tres" id="5_h4o8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnqly"]
content_margin_left = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_top = 3
border_width_bottom = 3
border_color = Color(0.678431, 0, 0.258824, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 16

[sub_resource type="Theme" id="Theme_eh05r"]
LineEdit/styles/normal = SubResource("StyleBoxFlat_pnqly")

[sub_resource type="Theme" id="Theme_l1f2i"]
LineEdit/styles/normal = SubResource("StyleBoxFlat_pnqly")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_mnjxw")

[node name="Overlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0b10f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "If your screen below 1920x1080,"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "then set: Low resolution mode"
horizontal_alignment = 1

[node name="lowRes" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("2_2f8ys")
texture_pressed = ExtResource("3_igx0a")

[node name="resEdit" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label2" type="Label" parent="VBoxContainer/resEdit"]
layout_mode = 2
text = "Width"

[node name="width" type="SpinBox" parent="VBoxContainer/resEdit"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_eh05r")
max_value = 10000.0
value = 825.0

[node name="Label" type="Label" parent="VBoxContainer/resEdit"]
layout_mode = 2
text = "Height
"

[node name="height" type="SpinBox" parent="VBoxContainer/resEdit"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_l1f2i")
max_value = 10000.0
value = 720.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("5_h4o8r")
text = "Apply"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/lowRes" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
